force-app/main/default/objects/Activity/fields/Athena_Message__c.field-meta.xml
<CustomField>
    <fullName>Athena_Message__c</fullName>
    <label>Athena Message</label>
    <type>TextArea</type>
</CustomField>