force-app/main/default/objects/Activity/fields/Athena_Status__c.field-meta.xml
<CustomField>
    <fullName>Athena_Status__c</fullName>
    <label>Athena Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>