force-app/main/default/objects/Activity/fields/HealthCloudGA__Age__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Age__c</fullName>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>