force-app/main/default/objects/Activity/fields/HealthCloudGA__CarePlanGoal__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CarePlanGoal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Goal this task is meant to address</description>
    <inlineHelpText>Goal this task is meant to address</inlineHelpText>
    <label>Goal</label>
    <referenceTo>HealthCloudGA__CarePlanGoal__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>