force-app/main/default/objects/Activity/fields/HealthCloudGA__CarePlanProblem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CarePlanProblem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Problem this task is mean to address</description>
    <inlineHelpText>Problem this task is mean to address</inlineHelpText>
    <label>Problem</label>
    <referenceTo>HealthCloudGA__CarePlanProblem__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>