force-app/main/default/objects/Activity/fields/HealthCloudGA__Category__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diagnosis</fullName>
            </value>
            <value>
                <fullName>Counselling</fullName>
            </value>
            <value>
                <fullName>Vaccination</fullName>
            </value>
            <value>
                <fullName>Exercise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>