force-app/main/default/objects/Activity/fields/HealthCloudGA__Conditions_Status__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Conditions_Status__c</fullName>
    <label>Condition Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evaluated - No Risk</fullName>
            </value>
            <value>
                <fullName>Asymptomatic</fullName>
            </value>
            <value>
                <fullName>Asymptomatic - Declined to Participate</fullName>
            </value>
            <value>
                <fullName>Symptomatic</fullName>
            </value>
            <value>
                <fullName>Symptomatic - Declined to Participate</fullName>
            </value>
            <value>
                <fullName>Cured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>