force-app/main/default/objects/Activity/fields/HealthCloudGA__Contract_Tracing_Status__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Contract_Tracing_Status__c</fullName>
    <label>Contract Tracing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Incoming</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>