force-app/main/default/objects/Activity/fields/Owner_Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Provider_Id__c</fullName>
    <formula>Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Provider Id</label>
    <type>Text</type>
</CustomField>