force-app/main/default/objects/Activity/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <formula>$User.Athena_Username__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Name</label>
    <type>Text</type>
</CustomField>