force-app/main/default/objects/Activity/fields/Send_To_Athena__c.field-meta.xml
<CustomField>
    <fullName>Send_To_Athena__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To Athena</label>
    <type>Checkbox</type>
</CustomField>