force-app/main/default/objects/Activity/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <formula>TEXT(Owner:User.TimeZoneSidKey)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timezone</label>
    <type>Text</type>
</CustomField>