force-app/main/default/objects/Activity/fields/WebApp_Response__c.field-meta.xml
<CustomField>
    <fullName>WebApp_Response__c</fullName>
    <label>WebApp Response</label>
    <type>TextArea</type>
</CustomField>