force-app/main/default/objects/Activity/fields/WebApp_Status__c.field-meta.xml
<CustomField>
    <fullName>WebApp_Status__c</fullName>
    <label>WebApp Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>