force-app/main/default/objects/Activity/fields/WebApp_StatusCode__c.field-meta.xml
<CustomField>
    <fullName>WebApp_StatusCode__c</fullName>
    <label>WebApp StatusCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>